# sa-home-bot

./: .config.toml.swp  .gitignore  ARCHITECTURE.md  AUTHORIZATION.md  IMPLEMENTATION_PLAN.md  LLM_INTEGRATION_PLAN.md  PROTOCOL.md  README.md  config.example.toml  pyproject.toml
deploy/: config-windows.example.toml  install-node.ps1  llm-runner.ps1  sa-home-bot.service  sa-home-monitor.service  sa-home-node.service  sa-home-node.xml  win-auto-update.ps1
src/sa_home_bot/: __init__.py  __main__.py  app.py  cli.py  config.py  llm_chat.py  nodectl.py  runtime.py  wake_core.py  wol.py
src/sa_home_bot/apps/: __init__.py  app.py  service.py
src/sa_home_bot/bot/: actions.py  (+24 more)
src/sentinel_bot/: __init__.py  __main__.py  app.py  cli.py
tests/unit/: conftest.py  test_ai_flow.py  test_ai_handler.py  test_app_smoke.py  test_apps_service.py  test_apps_view.py  test_authorization.py  test_baseline_scan.py  test_bot_menu.py  test_check_update_handler.py  test_commands.py  test_config_warnings.py  test_dedup_queue.py  test_disk_summary.py  test_fixups.py  test_health_diff.py  test_lhm.py  test_lifecycle.py  test_llm_ollama.py  test_llm_prompt.py  test_llm_service.py  test_monitor_events.py  test_monitor_link.py  test_monitor_service.py  test_node_app_update_source.py  test_node_events.py  test_node_join.py  test_node_links.py  test_node_routing.py  test_node_service.py  test_node_state.py  test_node_update.py  test_node_view.py  test_policy.py  test_power_parsing.py  test_proto_dispatch.py  test_proto_endpoints.py  test_proto_messages.py  test_proto_rpc.py  test_proto_tcp.py  (+20 more)
(+88 files in other folders)
