[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sa-home-bot"
version = "0.25.4"
description = "Рой домашних машин: нода-супервизор, службы (мониторинг, приложения) и Telegram-бот"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "sevboa", email = "sevboa@gmail.com" }]
dependencies = [
    "aiogram>=3.4,<4",
    "apscheduler>=3.10,<4",
    "aiosqlite>=0.19",
    "pydantic-settings>=2.2",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]
# Windows-нода: pythonnet для LibreHardwareMonitorLib.dll (sensors/lhm.py).
# Установка: pipx install "sa-home-bot[windows] @ git+https://…@vX.Y.Z"
windows = [
    "pythonnet>=3.0; sys_platform == 'win32'",
]

[project.scripts]
sa-home-bot = "sa_home_bot.cli:main"
nodectl = "sa_home_bot.nodectl:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sa_home_bot = ["db/schema.sql"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = ["B008"]
